# semanticentropy

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
semanticentropy/: __init__.py  cluster.py  corpus.py  entropy.py  eval.py  nli.py  realbench.py  realqa.py
tests/: test_nli.py  test_seam.py  test_semanticentropy.py
